# research-hub

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  README_zh-TW.md  RESEARCH_HUB_IMPROVEMENT_PLAN.md  SKILL.md  UPGRADE.md  build_hub.py  categorize_graph.py  config.json.example  constraints.txt  fetch_zotero.py  fix_orphans.py  hub_config.py  plugin.json  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.py  server.json  zotero_client.py
.ai/: codex_task_repo_reorg.md
.claude-plugin/: plugin.json
.github/: CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
CHANGELOG-archive/: CHANGELOG-pre-1.0.md
docs/: RELEASING.md  ai-integrations.md  ai-research-skills-umbrella-brief.md  ai-research-skills.md  anti-rag.md  anti-rag.zh-TW.md  audit_v0.26.md  audit_v0.26_notes.md  audit_v0.26_vault_sync.md  audit_v0.27.md  audit_v0.28.md  audit_v0.30.md  audit_v0.31.md  audit_v0.32.md  audit_v0.33.md  audit_v0.34.md  audit_v0.35.md  audit_v0.36.md  audit_v0.37.md  audit_v0.38.md  audit_v0.39.md  audit_v0.40.md  audit_v0.41.md  audit_v0.42.md  audit_v0.43.md  authenticity.md  clean_vault.md  cli-reference.md  cluster-integrity.md  cluster-memory.md  cluster_autosplit_llm-agents-social-cognitive-simulation.md  connector-design.md  customization.md  dashboard-walkthrough.md  example-claude-mcp-flow.md  ezproxy.md  file-formats.md  first-10-minutes.md  import-folder.md  import-folder.zh-TW.md  (+24 more)
references/: categories.md  customization.md  dataview-queries.md  obsidian-conventions.md  paper-template.md  setup-guide.md
scripts/: audit_note_content.py  audit_vault_sync.py  check_claims_schema.py  install_release_gate.sh  release-check.sh  verify_setup.py
tests/: _e2e_sandbox.py  _mcp_helpers.py  _persona_factory.py  _pipeline_fixtures.py  conftest.py  test_add_paper.py  test_analyze.py  test_artifact_delete_endpoint.py  test_arxiv_backend.py  test_authenticity.py  test_authenticity_l5_invariant.py  test_autofill.py  test_biorxiv_backend.py  test_build_hub.py  test_check_claims_schema.py  test_chemrxiv_backend.py  test_cinii_backend.py  test_citation_graph.py  test_cli_init_doctor.py  test_cli_notebooklm.py  test_cli_operations.py  test_cli_search.py  test_cli_smoke_comprehensive.py  test_cli_status_migrate.py  test_cli_synthesize.py  test_cluster_binding.py  test_cluster_rename_triple_sync.py  test_clusters.py  test_clusters_rename_zotero.py  test_config.py  test_consistency.py  test_crossref_backend.py  test_crystal.py  test_dashboard.py  test_dashboard_crystal_section.py  test_dashboard_data.py  test_dashboard_executor_e2e.py  test_dashboard_idempotent.py  test_dashboard_live_server.py  test_dashboard_persona.py  (+233 more)
(+243 files in other folders)
