[project]
name = "research-hub"
version = "0.4.1"
description = "Zotero -> Obsidian -> NotebookLM research pipeline"
authors = [{name = "WenyuChiou"}]
requires-python = ">=3.10"
dependencies = [
    "pyzotero>=1.5",
    "pyyaml>=6",
    "rapidfuzz>=3.0",
    "requests>=2.28",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.40",
]
dev = [
    "pytest>=7",
    "pytest-mock>=3.10",
    "responses>=0.23",
    "coverage[toml]>=7",
    "pytest-cov>=4",
]

[project.scripts]
research-hub = "research_hub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_hub"]
