[project]
name = "research-hub-pipeline"
version = "0.5.0"
description = "Zotero -> Obsidian -> NotebookLM research pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "platformdirs>=4.0",
    "pyzotero>=1.5.18",
    "pyyaml>=6",
    "rapidfuzz>=3.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/WenyuChiou/research-hub"
Repository = "https://github.com/WenyuChiou/research-hub"
Issues = "https://github.com/WenyuChiou/research-hub/issues"

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
dev = [
    "pytest>=7",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "responses>=0.23",
]

[project.scripts]
research-hub = "research_hub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_hub"]
